[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/SpriteSet.png" type="Texture" id=1]
[ext_resource path="res://scenes/towers/SimpleTower.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="SimpleTower" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 0, -25 )
region_enabled = true
region_rect = Rect2( 0, -50, 50, 100 )

[node name="shot_timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
